fix header spacing

--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ main {
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    margin-bottom: 1rem;
     max-width: 720px;
     width: 100%;
   }
